  to allow max 'count' nickchanges per 'period' seconds. The default is 3 per 60s.
  As usual, the nickchange limiting does not apply to ircops.
- Allow o/a/q'd users to nickchange if banned (#0001150).
- Added badword all { }, this will add the badword to the badword channel, badword message
  and badword quit lists... could be useful :p.
- Little config.h cleanup (removed obsolete non-working defines).
- Allow opers to talk in channel even if +m (#0001109).
- Implemented the *nix resolver under windows. This should solve 90% of the problems that
  exist in the Windows version. There may be some problems with the resolver that still
  need to be worked out, however it should be much more stable than before. Some of this
  code is based on the ircu Windows NT port by run.
- Fixed a problem with /quote dns i
- Rewrote a whole bunch of stuff in the extcmode code
- Extended the module system to allow better error reporting using ModuleGetError and
  ModuleGetErrorStr
- Changed channel mode +f, it's a much more advanced antiflood mode now.
  It can protect against joinfloods, ctcpfloods, nickfloods and message/notice floods.
  For example +f [10j]:15 allows 10 joins per 15 seconds, if the limit is reached the
  channel is set automatically +i (invite only) by the server.
  You can read more about it in section 3.12 'Anti-Flood features' of unreal32docs.html:
  http://www.vulnscan.org/UnrealIrcd/unreal32docs.html#feature_antiflood
  This change can cause desynch problems if both old+f and new+f servers are used on
  a network. It's (currrently!) possible to use the old +f system if you undef NEWCHFLOODPROT
  in include/config.h.
- Fixed ~5 compiler warnings at *NIX and ~20 at windows. Some of them _could_ have caused problems.
- Moved EOS debugging code to DEBUGMODE.
- Fixed a channel sync bug reported by thilo&Rocko (#0001218).
- Fixed minor config parser memleak reported by AngryWolf (#0001214).